feat: implement outsider extractor

--- a/main.ipynb
+++ b/main.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,6 +723,7 @@
     "import httpx\n",
     "from bs4 import BeautifulSoup\n",
     "from lxml import etree\n",
+    "import pandas as pd\n",
     "\n",
     "ceremonies_df = pd.DataFrame(columns=[\"#\", \"Date\", \"Categories\"])\n",
     "nominated_all_df = pd.DataFrame(\n",
